     - New :ot (describe offset-univeral-time value) command
     - New :pic (print-instances-of-class) command
     - New :ut (describe univeral-time value) command

  * Changes to GBBopen Tools
     - New *DISABLE-WITH-ERROR-HANDLING* global variable
     - New DOSUBLISTS macro
     - New :all-numeric, :include-day, and :full-names arguments to 
       FULL-DATE-AND-TIME


Important changes in GBBopen 1.3:

  * Incompatible changes:
     - Optional arguments (other than the universal-time argument) have
       been changed to keyword arguments in BRIEF-DATE, 
       BRIEF-DATE-AND-TIME, INTERNET-TEXT-DATE-AND-TIME, 
       ISO8661-DATE-AND-TIME, MESSAGE-LOG-DATE-AND-TIME

  * Changes to Module Manager
     - More consistent OS/platform compile-directory naming

  * Changes to GBBopen Tools
     - Saving/sending support for adjustable, fill-pointer, and 
       element-typed vectors, bit-vectors, and arrays
     - New FULL-DATE-AND-TIME, BRIEF-DURATION, BRIEF-RUN-TIME-DURATION,
       ENCODE-DATE-AND-TIME, PARSE-DATE, PARSE-DATE-AND-TIME, PARSE-TIME,
       and PARSE-DURATION functions 
     - Renamed: PRETTY-TIME-INTERVAL -> PRETTY-DURATION
                PRETTY-RUN-TIME-INTERVAL -> PRETTY-RUN-TIME-DURATION
       the old names are deprecated and will be removed eventually
     - New :EXPORT-SLOT-NAMES class option in DEFINE-CLASS
     - New LIST-LENGTH>2 predicate
     - New MAKE-DUPLICATE-INSTANCE-CHANGING-CLASS generic function

  * Changes to GBBopen Core
     - New class, DELETED-UNIT-INSTANCE, is now used to represent deleted 
       unit and space instances
     - New generic function, DELETED-INSTANCE-CLASS, and default method
       for STANDARD-UNIT-INSTANCE
     - New function, MAKE-INSTANCES-OF-CLASS-VECTOR
     - New abuts ordered-match operator to FIND-INSTANCES, etc.
     - speed/allocation optimizations to MAP-SORTED-INSTANCES-OF-CLASS
       and DO-SORTED-INSTANCES-OF-CLASS
     - New :coalesce-strings and :estimated-peak-forward-references