@@ -12,8 +12,8 @@ Requirements:
        CLISP        Version 2.47
        Clozure CL   Version 1.3 (r11993)
        CMUCL        Version 19f
-       ECL          Version 9.4.0 (configure with --enable-threads if 
-                                   possible; --enable-smallcons & 
+       ECL          Version 9.4 (configure with --enable-threads if 
+                                 possible; --enable-smallcons & 
                                    --enable-gengc are also recommended)
        Lispworks    Version 5.1.2
        SBCL         Version 1.0.28 (use sb-threads if possible)
@@ -32,7 +32,7 @@ Requirements:
    See PORTING for information on porting GBBopen to other Common Lisp
    implementations.
 
-Current Status Notes (May 1, 2009):
+Current Status Notes (May 11, 2009):
 
  - Implementation work is progressing on a regular basis.  See the list of
    pending development activities maintained on the "Development Activities"
