@@ -11,6 +11,9 @@ Important changes since GBBopen 1.3:
      - New :all-numeric, :include-day, and :full-names arguments to 
        FULL-DATE-AND-TIME
 
+  * Changes to GBBopen
+     - New DESCRIBE-INSTANCE-SLOT-VALUE generic function
+
 
 Important changes in GBBopen 1.3:
 
